XSALBATROSS-51: Several Css fixes in order for the Rss and Message macros to display properly Done. Patch submitted by Dan Miron, applied with a minor update.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@20309 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/presentation.css
+++ b/src/main/resources/albatross/presentation.css
@@ -232,7 +232,7 @@ Messages
   color: #c82;
 }
 
-div.errormessage, div.warningmessage, .infomessage, div.plainmessage{
+.errormessage, .warningmessage, .infomessage, .plainmessage{
   margin: 4px 0px 4px;
   border: 1px solid #DDD;
   padding: 8px 8px 8px 28px;
@@ -244,15 +244,15 @@ div.errormessage, div.warningmessage, .infomessage, div.plainmessage{
   background-image: url(icons/msginfo.png);
   color: #369;
 }
-div.plainmessage{
+.plainmessage{
   background-image: none;
   color: #369;
 }
-div.warningmessage{
+.warningmessage{
   background-image: url(icons/msgwarning.png);
   color: #c82;
 }
-div.errormessage{
+.errormessage{
   background-image: url(icons/msgerror.png);
   color: #F00;
 }
