--- a/src/main/resources/albatross/rss.css
+++ b/src/main/resources/albatross/rss.css
@@ -2,6 +2,7 @@
   padding: 10px;
   border: 1px dotted #003366;
   width: 30%;
+  white-space:normal;
 }
 
 .rsschanneltitle {
@@ -15,6 +16,7 @@
 
 .rssitemtitle {
   margin-bottom: 5px;
+  background-color: white;
 }
 
 .rssitem {
