--- a/src/main/resources/albatross/wiki.css
+++ b/src/main/resources/albatross/wiki.css
@@ -354,34 +354,26 @@ span.wikicreatelink a {
 }
 
 /* Footnotes */
-sup.footnoteRef a{
-  font-weight: bold;
+.footnotes {
+  font-size: 80%;
+  margin: 10px 0;
+  border-top: 1px solid #888;
+  padding: 1em;
+}
+.footnotes li {
+  padding: 0 4px;
+  margin: 0;
+  list-style-position: inside;
+}
+.footnoteRef a, .footnoteBackRef {
   text-decoration: none;
 }
-sup.footnoteRef:target a{
-  background-color: #E5F0FE;
-  color: #C82;
-}
-div.footnotes{
-  font-size: 70%;
-  margin: 10px 0px;
-  border: 1px solid #ddd;
-}
-.footnotes ol{
-  padding-left: 1em;
-}
-.footnotes li{
-  padding: 0px 4px;
-  margin: 0px;
-}
-.footnotes li:target{
-  background-color: #E5F0FE;
-}
-a.footnoteBackRef{
-  text-decoration: none;
-  font-weight: bold;
+.footnoteRef:target, .footnotes *:target {
+  border: 1px dotted #888;
+  background: #FFD;
 }
 
+/* Pagination (deprecated) */
 .pagedNavigation {
   text-align: center;
   padding: 8px 0px;
