XSALBATROSS-56 : XWikiExplorerWidget AllDocs treeview appears to be broken for Albatross skin
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@20739 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/screenlayout.css
+++ b/src/main/resources/albatross/screenlayout.css
@@ -993,7 +993,7 @@ div.pagelayoutoptions td{
   overflow: hidden;
 }
 
-#xwikieditcontent{
+#xwikieditcontent, .xwikitabpanescontainer {
   border: 2px solid #3381CC;
   padding: 3px 8px 3px 3px;
   overflow: auto;
