XSTOUCAN-99: Fix style when code macro is used inline XSCOLIBRI-27: Fix style when code macro is used inline XSALBATROSS-63: Fix style when code macro is used inline
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@23142 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/wiki.css
+++ b/src/main/resources/albatross/wiki.css
@@ -92,6 +92,13 @@ blockquote {
   font-family: courier, courier new, monospace;
 }
 
+/* Special case for code macro used inline */
+span.code {
+    display: inline-block;
+    vertical-align: top;
+    margin: 0 0;
+}
+
 .java-keyword {
   font-weight: bold;
   color: #0000aa;
