XSALBATROSS-64: Headings font size improvements Done.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@23828 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/wiki.css
+++ b/src/main/resources/albatross/wiki.css
@@ -3,60 +3,55 @@
 	line-height: 1.1em;
 	margin: 0 0 30px 0;
 }
-h1, h2, h3, h4 {
+
+h1, h2, h3, h4, h5, h6 {
   color: #000;
   background-color: inherit;
+  clear: both;
   padding: 0;
+  font-weight: normal;
+  font-style: normal;
+  line-height: 1.2em;
 }
 
 h1 {
-  margin-top: 5px;
-  font-size: 2.6em;
-  line-height: 1.1em;
-  margin: .15em 0 30px 0;
+  font-size: 2.31em;
+  margin: .15em 0 30px;
   padding-top: .85em;
   border-bottom: 0px solid;
 }
+#document-title h1 {
+  font-size: 3.06em;
+  letter-spacing: -1px;
+}
 h2 {
-  margin: 0px 0 15px 0;
+  font-size: 2.01em;
+  margin: 0 0 15px 0;
   padding-top: 1em;
   border-bottom: 1px solid;
   font-weight:bold;
-  font-style: normal;
-  font-size: 2.2em;
-  line-height: 1.1em;
 }
 
 h3 {
-  font-weight: normal;
-  font-size: 2em;
-  line-height: 1.1em;
+  font-size: 1.75em;
   margin: -0.5em 0 15px 0;
   padding-top: 1.1em;
 }
 
 h4 {
-  font-weight:normal;
+  font-size: 1.52em;
   color: #404040;
   margin: -1em 0 0 0;
   padding-top: 1.6em;
-  left: 0px;
-  font-size: 1.4em;
-  line-height: 1.1em;
 }
 h5 {
-  font-weight:normal;
+  font-size: 1.32em;
   color: #404040;
-  font-style: normal;
-  margin: -1.8em 0px 0px 0.5em;
-  left: 0px;
+  margin: -1.8em 0 0;
   padding-top: 1.85em;
-  font-size: 1.2em;
-  line-height: 1.1em;
 }
-
-h1, h2, h3, h4, h5, h6 {
-  clear: both;
+h6 {
+  font-size: 1.15em;
 }
 
 blockquote { 
