XSCOLIBRI-146 : Transform action menu into 2 menus: general and content menus XSALBATROSS-69 : Hide arrow characters from top menu entries XSTOUCAN-133 : Hide arrow characters from top menu entries
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@25078 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/screenlayout.css
+++ b/src/main/resources/albatross/screenlayout.css
@@ -574,6 +574,11 @@ padding:1px 3px;
 line-height:1.5em;
 
 }
+
+.menuarrow {
+  display:none;
+}
+
 /*
 ---------------------------------------
 Editors
