XAPANELS-97: Search Panel shouldn't use an ID attribute since it prevents displaying several search panel on the same page XSALBATROSS-70: Modify CSS to use Class attribute instead of Id attribute for the Search Panel styling XSCOLIBRI-151: Modify CSS to use Class attribute instead of Id attribute for the Search Panel styling XSFINCH-12: Modify CSS to use Class attribute instead of Id attribute for the Search Panel styling XSTOUCAN-136: Modify CSS to use Class attribute instead of Id attribute for the Search Panel styling
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@25117 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/screenlayout.css
+++ b/src/main/resources/albatross/screenlayout.css
@@ -639,17 +639,17 @@ Panels
 ---------------------------------------
 */
 
-#globalsearch {
+.globalsearch {
   text-align: center;
   margin: 0px;
   padding: 0px 0px 30px;
 }
-#globalsearch input{
+.globalsearch input{
   font-size: 0.7em;
   border: 1px solid;
   display: inline !important;
 }
-#globalsearch input.button{
+.globalsearch input.button{
   vertical-align: middle;
   font-size: 1em;
   border: 0px;
