--- a/src/main/resources/albatross/colorsblack.css
+++ b/src/main/resources/albatross/colorsblack.css
@@ -334,7 +334,7 @@ Panels
   background-color: #676D73;
   color: #fff;
 }
-#globalsearch input.button{
+.globalsearch input.button{
 background-color: #384554;}
 
 
