--- a/src/main/resources/albatross/customlayout.css
+++ b/src/main/resources/albatross/customlayout.css
@@ -26,7 +26,7 @@ Global header
   margin: ${spacing}px 0px 0px 0px;
 }
 
-#globalsearch {
+.globalsearch {
   margin: ${spacing}px ${spacing}px 0px 0px;
 }
 
