XAPANELS-98 : Accordion section titles arbitrarily use level 6 headings XSALBATROSS-71 : Accordion section titles arbitrarily use level 6 headings XSTOUCAN-137 : Accordion section titles arbitrarily use level 6 headings XSCOLIBRI-160 : Accordion section titles arbitrarily use level 6 headings
Put back h6 styling to ensure backward compatibility.

git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@25415 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/colorsblack.css
+++ b/src/main/resources/albatross/colorsblack.css
@@ -520,7 +520,9 @@ th{
   border-top: 1px solid #384554 !important;
   border-bottom: 1px solid #384554 !important;
 }
-.panel .accordionTabTitleBar h1{
+
+/* Note that h6 styling is provided in order to ensure backward compatibility after XSALBATROSS-71 */
+.panel .accordionTabTitleBar h1, .panel .accordionTabTitleBar h6 {
   margin: 0px;
   color: #FFF !important;
   font-style: normal !important;
@@ -531,7 +533,9 @@ th{
   border-bottom: 2px solid #384554 !important;
   border-top: 1px solid #384554;
 }
-.panel .accordionTabTitleBar h1:hover{
+
+/* Note that h6 styling is provided in order to ensure backward compatibility after XSALBATROSS-71 */
+.panel .accordionTabTitleBar h1:hover, .panel .accordionTabTitleBar h6:hover {
   background: transparent url("icons/black-more-3.png") right center no-repeat !important;
 }
 
