--- a/src/main/resources/albatross/screenlayout.css
+++ b/src/main/resources/albatross/screenlayout.css
@@ -49,6 +49,12 @@ html > body .minwidth, html > body .minwidthb, html > body .minwidthc{
   z-index: 1;
 }
 
+.wiki-code {
+  width: 100%;
+  height: 300px;
+  overflow: auto;
+}
+
 /*
 ---------------------------------------
 Global header
