--- a/src/main/resources/albatross/classes.css
+++ b/src/main/resources/albatross/classes.css
@@ -36,3 +36,14 @@
   height: 10px;
   visibility: hidden;
 }
+.column {
+  float: left;
+}
+.half {
+  /* Rounding errors with 50%, might end up with one more pixel which pushes the column down. */
+  width: 49.9%;
+}
+.third {
+  /* Rounding errors with 33.3%, might end up with one more pixel which pushes the column down. */
+  width: 33.2%;
+}
