XSALBATROSS-48: Adapt albatross CSS for RSS Macro 2.0 Done.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@31697 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/rss.css
+++ b/src/main/resources/albatross/rss.css
@@ -3,6 +3,7 @@
   border: 1px dotted #003366;
   width: 30%;
   white-space:normal;
+  background-color: #FFF;
 }
 
 .rsschanneltitle {
@@ -11,12 +12,11 @@
   margin-bottom: 10px;
   padding: 5px;
   text-align: center;
-  background-color: #BDDE7B;
 }
 
 .rssitemtitle {
   margin-bottom: 5px;
-  background-color: white;
+  background-color: #FFF;
 }
 
 .rssitem {
