XSALBATROSS-77: Ensure that user avatars respect the maximum dimensions even when they can't be resized server-side Done.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@31699 f329d543-caf0-0310-9063-dda96c69346f

--- a/src/main/resources/albatross/classes.css
+++ b/src/main/resources/albatross/classes.css
@@ -47,3 +47,25 @@
   /* Rounding errors with 33.3%, might end up with one more pixel which pushes the column down. */
   width: 33.2%;
 }
+
+.avatar_30 {
+  max-widht: 30px;
+  max-height: 30px;
+}
+* html .avatar_30 {
+  width: 30px;
+}
+.avatar_50 {
+  max-widht: 50px;
+  max-height: 50px;
+}
+* html .avatar_50 {
+  width: 50px;
+}
+.avatar_120 {
+  max-widht: 120px;
+  max-height: 120px;
+}
+* html .avatar_120 {
+  width: 120px;
+}
