--- a/src/main/resources/albatross/menuedit.vm
+++ b/src/main/resources/albatross/menuedit.vm
@@ -1,5 +1,9 @@
 #if($isInServletMode)## Visible only in a page
-<div id="maineditmenu" class="actionmenu layoutsubsection">
-  #xwikitopmenuentry($doc.getURL() "$msg.get('core.menu.editing')__SEPARATOR__$!{escapetool.xml($doc.name)}" 'tmEditing' '')
+<div id="actionmenu" class="layoutsubsection">
+<div class="centered">
+<div class="editinfo">
+$msg.get("editing"): <a href="$doc.getURL()">$escapetool.xml($doc.name)</a>
+</div>
+</div>
 </div>
 #end
